fix: Protocols title on mobile

--- a/src/components/Wallet/Dashboard/Protocols/Protocols.module.scss
+++ b/src/components/Wallet/Dashboard/Protocols/Protocols.module.scss
@@ -13,6 +13,8 @@
 
         .title {
             display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
             align-items: center;
             justify-content: space-between;
             padding: 15px 20px;
@@ -147,9 +149,13 @@
     .wrapper {
         gap: 20px;
 
-        .title {
-            .sortHolder {
-                flex-direction: column;
+        .category {
+            .title {
+                padding: 15px;
+                justify-content: center;
+                .sortHolder {
+                    flex-direction: column;
+                }
             }
         }
         .token {
